--- a/ng-app/angular.json
+++ b/ng-app/angular.json
@@ -26,7 +26,8 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
-              "src/assets/fonts/fonts-nearly-dignified.scss"
+              "src/assets/fonts/fonts-nearly-dignified.scss",
+              "src/assets/fonts/fonts-vollkorn.scss"
             ],
             "scripts": []
           },
@@ -88,7 +89,8 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
-              "src/assets/fonts/fonts-nearly-dignified.scss"
+              "src/assets/fonts/fonts-nearly-dignified.scss",
+              "src/assets/fonts/fonts-vollkorn.scss"
             ],
             "scripts": []
           }
