added lamar dependecy injection

--- a/WebApi/DotNetApi/DotNetApi.csproj
+++ b/WebApi/DotNetApi/DotNetApi.csproj
@@ -5,4 +5,7 @@
   </PropertyGroup>
 
 
+  <ItemGroup>
+    <PackageReference Include="Lamar.Microsoft.DependencyInjection" Version="4.3.0" />
+  </ItemGroup>
 </Project>
