--- a/WebApi/DotNetApi.Data/DotNetApi.Data.csproj
+++ b/WebApi/DotNetApi.Data/DotNetApi.Data.csproj
@@ -15,5 +15,6 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.4" />
+    <PackageReference Include="Lamar.Microsoft.DependencyInjection" Version="4.3.0" />
   </ItemGroup>
 </Project>
